kubernetes/apps/kubeflow/katib/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: katib
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - katib.kubeflow.goyangi.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /katib
      backendRefs:
        - name: katib-ui
          port: 80
